--- a/assets/style.css
+++ b/assets/style.css
@@ -7,6 +7,13 @@ footer
 background-color: black;
 color: white;
 position: fixed;
-bottom: 0;
-width: 100%;
+bottom: 100;
+height: 0.2rem
+;
+}
+footer p {
+    text-align: center;
+    font-size: 0.6rem;
+
+
 }
