--- a/assets/style.css
+++ b/assets/style.css
@@ -10,11 +10,16 @@ color: white;
 position: fixed;
 bottom: 100;
 height: 0.2rem
-;
+
 }
 footer p {
     text-align: center;
     font-size: 0.6rem;
-margin-top: 0.5rem;
-
+margin-top: 0.5rem;]
+}
+#container{
+    display: flex;
+}
+.cartao{
+    margin: 1rem 1rem;
 }
